@@ -41,6 +41,8 @@
           (http://www.packetfence.org/mantis/view.php?id=403)
         pf.conf value arp.listendevice is not defined!
           (http://www.packetfence.org/mantis/view.php?id=405)
+        getMacAddr (Cisco.pm) does not work with port-security
+          (http://www.packetfence.org/mantis/view.php?id=407)
 
 
 1.7.4
